<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ucs_maubin.lm17_team12.lbums.Fragment.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbars="none">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top10_tracks"
            android:padding="@dimen/subheadingPadding"
            android:textSize="@dimen/subHeadingTextSize"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/top10_tracks_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/newAlbum_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/subheadingPadding"
                    android:paddingTop="@dimen/subheadingPadding"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title"
                    android:text="@string/new_album"/>

                <TextView
                    android:id="@+id/moreAlbum_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="@dimen/subheadingPadding"
                    android:paddingTop="@dimen/subheadingPadding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/album_title"
                    android:text="@string/more"/>

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/album2"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerCrop"
                    android:layout_below="@id/newAlbum_title"
                    android:transitionName="@string/top10_coverTransition"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail"
                    android:paddingLeft="21dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/album_title"
                    android:textSize="18sp"
                    android:text="Hello World!"/>

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:paddingLeft="21dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="16dp"
                    android:textSize="15sp"
                    android:text="The Earth"/>

                <LinearLayout
                    android:id="@+id/newAlbum_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="8dp"
                        android:paddingTop="16dp"
                        android:textSize="18sp"
                        android:text="Play"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_play_circle"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="21dp"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_genres"
            android:padding="@dimen/subheadingPadding"
            android:textSize="@dimen/subHeadingTextSize"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/genre_tracks_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artists"
            android:padding="@dimen/subheadingPadding"
            android:textSize="@dimen/subHeadingTextSize"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/artist_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>